# blackjack

./: .gitignore  Cargo.toml  README.md  _typos.toml  biome.json  commitlint.config.cjs  justfile  lefthook.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/simulator/: Cargo.toml  README.md
apps/simulator/src/: main.rs  simulator.rs  statistics.rs  types.rs
crates/calculator/: ALGORITHM.md  Cargo.toml  README.md
crates/calculator/examples/: benchmark.rs
crates/calculator/src/: calculator.rs  ev_calculator.rs  lib.rs  probability_calculator.rs  rules.rs  strategy.rs  types.rs
crates/calculator/tests/: basic_test.rs  dealer_advantage_test.rs  edge_cases_test.rs  player_advantage_test.rs
