[workspace]
members = [
    "apps/simulator",
    "crates/calculator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["zeekrs"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
once_cell = "1.21.3"
criterion = "0.8.0"
proptest = "1.7.0"

# 全局 release 配置
[profile.release]
opt-level = 3                  # 最高优化级别
lto = "fat"                    # 最激进的链接时优化
codegen-units = 1              # 单代码生成单元
panic = "abort"                # 移除panic检查
strip = true                   # 移除调试符号
overflow-checks = false        # 移除整数溢出检查
debug = false                  # 移除调试信息
incremental = false            # 禁用增量编译
rpath = false                  # 禁用rpath

# 目标特定优化可以通过环境变量设置
# RUSTFLAGS="-C target-cpu=native -C target-feature=+avx2,+fma,+bmi2"

